# pygeosimplify

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  codecov.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
data/: ATLASCaloCells.root
docs/: index.md  modules.md
modules/: index.html
pygeosimplify/: __init__.py
pygeosimplify/cfg/: config.py  test_data.py
pygeosimplify/coordinate/: definitions.py
pygeosimplify/geo/: base.py  cells.py
pygeosimplify/io/: file_handler.py  geo_handler.py
pygeosimplify/simplify/: cylinder.py  detector.py  helpers.py  layer.py  post_process.py
pygeosimplify/utils/: message_type.py  path_resolver.py
pygeosimplify/vis/: cylinder.py  geo.py  scene.py
search/: search_index.json
tests/: helpers.py  test_cell_energy_plot.py  test_cell_scene.py  test_coordinate_definitions.py  test_coordinate_transform.py  test_file_handler.py  test_foo.py  test_geo_definitions.py  test_geo_layer.py  test_load_geo.py  test_plot_ATLAS_calo.py  test_plot_cylinder.py  test_simplified_detector.py
tests/data/: ATLASCaloCells.root  cell_energy_data.root
