[tool.poetry]
name = "pygeosimplify"
version = "0.0.2"
description = "Python package for automatic, cell-based inference of clash-free simplified detector geometry."
authors = ["Joshua Falco Beirer <jbeirer@cern.ch>"]
repository = "https://github.com/jbeirer/pygeosimplify"
documentation = "https://jbeirer.github.io/pygeosimplify/"
readme = "README.md"
packages = [
  {include = "pygeosimplify"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
uproot = "^5.1.2"
pandas = "^2.1.2"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
scipy = "^1.11.3"
tqdm = "^4.66.1"
distinctipy = "^1.2.3"
pyg4ometry = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
ipykernel = "^6.26.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["pygeosimplify"]
disallow_untyped_defs = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports= "True"
disallow_any_unimported = "False"


[tool.pytest.ini_options]
testpaths = ["tests"]
# filter deprecation warnings from external packages
filterwarnings = [
    "ignore::DeprecationWarning:(?!pygeosimplify).*",
]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Comparison to true should be 'if cond is true:'
    "E712"
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pygeosimplify"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
